Add KDE Git repository URL

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = kmail-account-wizard
 url = https://download.kde.org/stable/applications/18.12.3/src/kmail-account-wizard-18.12.3.tar.xz
 archives = 
-giturl = 
+giturl = https://anongit.kde.org/kmail-account-wizard.git
 
 [autospec]
 # build 32 bit libraries
