--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kmail-account-wizard
-url = https://download.kde.org/stable/applications/19.04.0/src/kmail-account-wizard-19.04.0.tar.xz
+url = https://download.kde.org/stable/applications/19.04.1/src/kmail-account-wizard-19.04.1.tar.xz
 archives = 
 giturl = https://anongit.kde.org/kmail-account-wizard.git
 
@@ -52,7 +52,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = true
 
