--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = kmail-account-wizard
 url = https://download.kde.org/stable/release-service/20.04.2/src/kmail-account-wizard-20.04.2.tar.xz
 archives = 
-giturl = https://anongit.kde.org/kmail-account-wizard.git
+giturl = https://invent.kde.org/pim/kmail-account-wizard.git
 domain = 
 alias = 
 
